# qmann-v2.0

./: .flake8  .gitignore  AUTOMATIC_TEST_LOGGING_SETUP.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  GITHUB_PUBLICATION_READY.md  LICENSE  Makefile  NOTICE  QMANN_TEST_SUITE_SUMMARY.md  QUANTUM_INFRASTRUCTURE_ANALYSIS.md  README.md  SECURITY.md  TEST_LOGGING_GUIDE.md  TEST_RESULTS_SUMMARY.txt  docker-compose.yml  docker-requirements.txt  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml  qmann_tests.yml  quantum-tests.yml  release.yml  security.yml
docs/: DOCUMENTATION_ORGANIZATION.md  README.md
docs/core/: ARCHITECTURE_GUIDE.md  INTEGRATION_EXAMPLES.md  README.md  SECURITY_BEST_PRACTICES.md
docs/getting-started/: API_DOCUMENTATION.md  DEPLOYMENT_GUIDE.md  README.md
docs/operations/: PERFORMANCE_BENCHMARKING.md  PERFORMANCE_OPTIMIZATION_GUIDE.md  README.md  TROUBLESHOOTING_GUIDE.md
docs/quality/: COMPREHENSIVE_TEST_COVERAGE.md  DETAILED_ANALYSIS_REPORT.md  FINAL_COMPREHENSIVE_REPORT.md  QUALITY_ASSURANCE_REPORT.md  README.md
docs/reference/: DOCUMENTATION_INDEX.md  PROJECT_COMPLETION_SUMMARY.md  README.md  REFERENCES.md
examples/: autonomous_demo.py  comprehensive_2025_demo.py  healthcare_demo.py  industrial_demo.py  industry_applications_demo_2025.py  multi_provider_quantum_demo_2025.py  quantum_advantage_demo_2025.py
monitoring/: prometheus.yml
nginx/: nginx.conf
reports/: README.md  SIMULATOR_TESTS_DETAILED.md  TEST_EXECUTION_REPORT.md  all_tests_report.txt  simulator_tests_report.txt
scripts/: __init__.py  check_license_compatibility.py  generate_security_report.py  generate_test_report.py  quantum_security_scan.py  run_tests_with_logging.py
sql/: init.sql
src/qmann/: __init__.py
src/qmann/applications/: __init__.py  autonomous.py  drug_discovery.py  finance.py  healthcare.py  industrial.py  materials_science.py
src/qmann/classical/: __init__.py  lstm.py
src/qmann/core/: __init__.py  base.py  config.py  exceptions.py  memory.py
src/qmann/hybrid/: __init__.py  quantum_lstm.py  trainer.py  training_protocols.py
src/qmann/quantum/: __init__.py  advanced_techniques_2025.py  circuits.py  error_mitigation_2025.py  memory.py  qmatrix.py  quantum_transformer_2025.py
src/qmann/utils/: __init__.py  backend.py  benchmarks.py  error_mitigation.py  multi_provider_backend.py  security.py  visualization.py
tests/: __init__.py  conftest.py  test_2025_features.py  test_applications.py  test_drug_discovery_applications.py  test_finance_applications.py  test_import.py  test_materials_science_applications.py  test_qmann_integration.py
tests/ablation/: __init__.py  test_components.py
tests/applications/: __init__.py  test_industry.py
tests/continual/: __init__.py  test_forgetting.py
tests/error_mitigation/: __init__.py  test_mitigation.py
tests/hardware/: __init__.py  test_hardware_variability.py
tests/integration/: __init__.py  test_end_to_end.py
tests/performance/: __init__.py  test_benchmarks.py
tests/production/: __init__.py  test_production_data_robustness.py
tests/quantum/: __init__.py  test_quantum_simulator.py
tests/scalability/: __init__.py  test_scalability_limits.py
tests/simulators/: __init__.py  test_quantum_backend.py
